--- a/random.html
+++ b/random.html
@@ -29,9 +29,10 @@
       <div class="shader">
     <form action="/action_page.php" method="POST">
         <input type="text" id="fname" name="Username" placeholder="Username" required><br>
-        <input type="text" id="Email" name="Email" placeholder="Email Address" onkeypress="keydown()" ><br><br>
-        <input type="text" id="sname" name="Password" placeholder="Password"><br>
+        <input type="text" id="Email" name="Email" placeholder="Email Address" onkeypress="keydown()" ><br>
+        <input type="text" id="sname" name="Password" placeholder="Password">
         <input type="text" id="lname" name="ConfPassword" placeholder="Confirm Password" required><br><br>
+        <input type="text" id="phoneNumber" name="Number" placeholder="Enter Your Phone Number" onkeyup="phoneValidator()"><br><br>
         <input type="submit" value="Submit">
       </form> 
       </div>
