--- a/random.html
+++ b/random.html
@@ -24,7 +24,7 @@
 </style>
 </head>
 
-<body>
+<body onload="formClear()">
   <div class="firstDiv">
       <div class="shader">
     <form action="/action_page.php" method="POST">
