--- a/random.html
+++ b/random.html
@@ -20,7 +20,13 @@
       padding:15px;
 
   }
- 
+   
+ form div {
+    border: red;
+    width:100%;
+    height:100px;
+    margin-left: 10px;
+  }
 </style>
 </head>
 
@@ -29,6 +35,11 @@
       <div class="shader">
     <form action="/action_page.php" method="POST">
         <input type="text" id="fname" name="Username" placeholder="Username" required><br>
+       <div>
+          <P><i class="fas fa-check"></i> Be between 5-50 Characters</P>
+          <P><i class="fas fa-check"></i> Must be unique</P>
+          <P><i class="fas fa-check"></i> No spaces</P>
+        </div>
         <input type="text" id="Email" name="Email" placeholder="Email Address" onkeypress="keydown()" ><br>
         <input type="text" id="sname" name="Password" placeholder="Password">
         <input type="text" id="lname" name="ConfPassword" placeholder="Confirm Password" required><br><br>
