--- a/random.html
+++ b/random.html
@@ -3,6 +3,8 @@
 <head>
 <title>Title of the document</title>
 <meta> <link rel="stylesheet" href="timer.css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+
 <style>
     * {
         margin: 0px;
@@ -22,10 +24,9 @@
   }
    
  form div {
-    border: red;
+    border: solid red;
     width:100%;
     height:100px;
-    margin-left: 10px;
   }
 </style>
 </head>
