--- a/random.html
+++ b/random.html
@@ -37,10 +37,9 @@
     <form action="/action_page.php" method="POST">
         <input type="text"  name="Username" placeholder="Username" onfocus = 'userNameGuideBox()' onblur="userNameGuideBoxout()">
        <div>
-          <P><i class="fas fa-check"></i> Be between 5-50 Characters</P>
-          <P><i class="fas fa-check"></i> Must be unique</P>
-          <P><i class="fas fa-check"></i> No spaces</P>
-          <P><i class="fas fa-check"></i> Contain at least 1 letter</P>
+          <P><i class="fas fa-check"></i> Minimum 8 characters</P>
+          <P><i class="fas fa-check"></i> Must contain atleast 1 number</P>
+          <P><i class="fas fa-check"></i> Must contain atleast 1 letter</P>
         </div>
         <input type="text" name="Email" placeholder="Email Address" onkeyup="emailValidator()" ><br>
         <input type="text" name="Password" placeholder="Password">
