--- a/random.html
+++ b/random.html
@@ -35,7 +35,7 @@
   <div class="firstDiv">
       <div class="shader">
     <form action="/action_page.php" method="POST">
-        <input type="text"  name="Username" placeholder="Username" onfocus = 'userNameGuideBox()' onblur="userNameGuideBoxout()">
+        <input type="text"  name="Username" placeholder="Username" onfocus = 'userNameGuideBox()' onblur="userNameGuideBoxout()" onkeyup="userNameGuideBoxField()">
        <div>
           <P><i class="fas fa-check"></i> Minimum 8 characters</P>
           <P><i class="fas fa-check"></i> Must contain atleast 1 number</P>
