--- a/random.html
+++ b/random.html
@@ -2,53 +2,89 @@
 
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Title of the document</title>
-      <meta>
-      <link rel="stylesheet" href="timer.css">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-      <style>
-         * {
-         margin: 0px;
-         padding: 0px;
-         box-sizing: border-box;
-         }
-         .firstDiv {
-         max-width: 800px;
-         margin: 0 auto;
-         border: solid black;
-         }
-         form input {
-         width: 100%;
-         margin-bottom: 5px;
-         padding:15px;
-         }
-         form div {
-         border: solid red;
-         width:100%;
-         height:100px;
-         }
-      </style>
-   </head>
-   <body onload="formClear()">
+<head>
+<title>Title of the document</title>
+<meta> <link rel="stylesheet" href="timer.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+<style>
+    * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+        font-family: gdsherpa,Helvetica,Arial,sans-serif;
+    }
+  .firstDiv {
+    width: 500px;
+    border: solid blue;
+    margin: 0 auto;
+
+  }
+  form {
+    padding:40px;
+  }
+  form input {
+      width: 100%;
+      margin-bottom: 5px;
+      padding: 15px;
+      border:  .0625rem solid #d4dbe0;
+  }
+  form div {
+    border: solid red ;
+    width:100%;
+    height:100px;
+    display: none;
+  }
+ .fas {
+   display:none;
+ }
+ .shader {
+     border: solid black;
+     width:100%;
+ }
+ fieldset {
+   border:none;
+ }
+ 
+</style>
+</head>
+
+<body onload="formClear()">
+  <div class="Shader">
+    <h1 style="text-align: center;">Create An Account</h1>
       <div class="firstDiv">
-         <div class="shader">
-            <form action="/action_page.php" method="POST">
-               <input type="text"  name="Username" placeholder="Username" onfocus = 'userNameGuideBox()' onblur="userNameGuideBoxout()" onkeyup="userNameGuideBoxField()">
-               <div>
-                  <P><i class="fas fa-check"></i> Minimum 8 characters</P>
-                  <P><i class="fas fa-check"></i> Must contain atleast 1 number</P>
-                  <P><i class="fas fa-check"></i> Must contain atleast 1 letter</P>
-               </div>
-               <input type="text" name="Email" placeholder="Email Address" onkeyup="emailValidator()" ><br>
-               <input type="text" name="Password" placeholder="Password">
-               <input type="text" name="ConfPassword" placeholder="Confirm Password"><br><br>
-               <input type="text" name="Number" placeholder="Enter Your Phone Number" onkeyup="phoneValidator()"><br><br>
-               <input type="submit" value="Submit">
-            </form>
-         </div>
+      <form action="/action_page.php" method="POST">
+        <fieldset>
+          <label><h1>UserName</h1></label>
+        <input type="text"  name="Username" onfocus = 'userNameGuideBox()' onblur="userNameGuideBoxOut()" onkeyup="userNameGuideBoxField()">
+        <div>
+          <P><i class="fas fa-check"></i> Minimum 8 characters</P>
+          <P><i class="fas fa-check"></i> Must contain atleast 1 number</P>
+          <P><i class="fas fa-check"></i> Must contain atleast 1 letter</P>
+        </div>
+      </fieldset>
+      <fieldset>
+        <label for="email"><h1>Email</h1></label>
+        <input type="text"  name="Email"  onfocus= "emailValidator()" onblur= "emailValidator()" ><br>
+      </fieldset>
+      <fieldset>
+        <label for=" password"><h1>Password</h1></label>
+        <input type="text"  name="Password" onfocus= "passwordGuideBox()" onblur = 'passwordGuideBoxOut()'>
+        <div>
+          <P><i class="fas fa-check"></i> Minimum 9 characters</P>
+
+        </div>
+      </fieldset>
+      <fieldset>
+        <label for="Phone Number"><h1>Phone Number</h1></label>
+        <input type="text"  name="Number" onkeyup="phoneValidator()"><br><br>
+      </fieldset>
+      </form> 
       </div>
-      <script src="./ok.js">  </script>
-   </body>
+  </div>
+<script src="./ok.js">  
+</script>
+</body>
+
 </html>
+
 
