--- a/random.html
+++ b/random.html
@@ -3,47 +3,8 @@
 <head>
 <title>Title of the document</title>
 <meta> <link rel="stylesheet" href="timer.css">
+<link rel="stylesheet" href="complimentary.css" >
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-<style>
-    * {
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
-        font-family: gdsherpa,Helvetica,Arial,sans-serif;
-    }
-  .firstDiv {
-    width: 500px;
-    border: solid blue;
-    margin: 0 auto;
-
-  }
-  form {
-    padding:40px;
-  }
-  form input {
-      width: 100%;
-      margin-bottom: 5px;
-      padding: 15px;
-      border:  .0625rem solid #d4dbe0;
-  }
-  form div {
-    border: solid red ;
-    width:100%;
-    height:100px;
-    display: none;
-  }
- .fas {
-   display:none;
- }
- .shader {
-     border: solid black;
-     width:100%;
- }
- fieldset {
-   border:none;
- }
- 
-</style>
 </head>
 
 <body onload="formClear()">
