--- a/random.html
+++ b/random.html
@@ -45,6 +45,8 @@
             <input type="submit" value="Create An Account" class="submit">
          </form>
       </div>
+ <script src="valid.js">
+    </script>
    </body>
 </html>
 
