--- a/minivalidator.html
+++ b/minivalidator.html
@@ -5,7 +5,7 @@
    <head>
       <title>Title of the document</title>
       <meta>
-      <link rel="stylesheet" href="complimentary.css">
+      <link rel="stylesheet" href='valid.css'>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
    </head>
    <body>
@@ -31,11 +31,11 @@
             </fieldset>
             <fieldset>
                <label>Username</label>
-               <input type="text"></input>
+               <input type="text" onkeyup="userNameGuideBoxField()" id="userName"></input>
                <div id='hidden-div'>
-                  <P><i class="fas fa-check"></i> Minimum 8 characters</P>
-                  <P><i class="fas fa-check"></i> Must contain atleast 1 number</P>
-                  <P><i class="fas fa-check"></i> Must contain atleast 1 letter</P>
+                  <P><i class="fas fa-check"></i></i> Minimum 8 characters</P>
+                  <P><i class="fas fa-check"></i></i> Must contain atleast 1 number</P>
+                  <P><i class="fas fa-check"></i></i> Must contain atleast 1 letter</P>
                </div>
             </fieldset>
             <fieldset>
@@ -45,10 +45,8 @@
             <input type="submit" value="Create An Account" class="submit">
          </form>
       </div>
- <script src="valid.js">
-    </script>
+      <script src="valid.js"></script>
    </body>
 </html>
-
 
 
