--- a/minivalidator.html
+++ b/minivalidator.html
@@ -31,7 +31,7 @@
             </fieldset>
             <fieldset>
                <label>Username</label>
-               <input type="text" onkeyup="userNameGuideBoxField()" id="userName"></input>
+               <input type="text" onblur="userNameOut()" id="userName"></input>
                <div id='hidden-div'>
                   <P><i class="fas fa-check"></i></i> Minimum 8 characters</P>
                   <P><i class="fas fa-check"></i></i> Must contain atleast 1 number</P>
