--- a/minivalidator.html
+++ b/minivalidator.html
@@ -26,12 +26,12 @@
          <form>
             <fieldset>
                <label>Email</label>
-               <input type="text" id="email" onblur="emailValidator()"></input>
+               <input type="text" id="email"></input>
                <p> </p>
             </fieldset>
             <fieldset>
                <label>Username</label>
-               <input type="text" onblur="userNameOut()" id="userName"></input>
+               <input type="text" id="userName"></input>
                <div id='hidden-div'>
                   <P><i class="fas fa-check"></i></i> Minimum 8 characters</P>
                   <P><i class="fas fa-check"></i></i> Must contain atleast 1 number</P>
