--- a/minivalidator.html
+++ b/minivalidator.html
@@ -42,6 +42,13 @@
                <label>Password</label>
                <input type="text"></input>
             </fieldset>
+             <fieldset>
+               <label>Phone Number</label>
+               <input type="text"></input>
+               <div id = 'hidden-phonediv'>
+                  <p><i class="fas fa-phone"></i>Phone number must be seperated by ' - '</p>
+               </div>
+            </fieldset>
             <input type="submit" value="Create An Account" class="submit">
          </form>
       </div>
