--- a/minivalidator.html
+++ b/minivalidator.html
@@ -47,6 +47,8 @@
                <input type="text"></input>
                <div id = 'hidden-phonediv'>
                   <p><i class="fas fa-phone"></i>Phone number must be seperated by ' - '</p>
+                  <br>
+                  <p><i class="fas fa-phone-slash"></i>Connecticut based numbers only</p>
                </div>
             </fieldset>
             <input type="submit" value="Create An Account" class="submit">
