--- a/minivalidator.html
+++ b/minivalidator.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href='valid.css'>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
    </head>
-   <body>
+   <body onload="formClear()">
       <div class = 'first-div'>
          <div class = 'innercontainer'>
             <h1>Create an Account</h1>
@@ -29,10 +29,17 @@
                <input type="text" id="email"></input>
                <p> </p>
             </fieldset>
+            <!--
+               the function is only evaluated once if using onfocus, which is not suitable
+               the function must be revaulated and revaluated to have the checkmarks
+               sync with the user typing, onfocus is not suitable here
+               if there were no checkmarks, it would be suitable.
+               do i really have to make a seperate function to display the block?
+            -->
             <fieldset>
                <label>Username</label>
-               <input type="text" id="userName"></input>
-               <div id='hidden-div'>
+               <input type="text"  id="userName"></input>
+               <div id='hidden-div' style="margin: -5px;">
                   <P><i class="fas fa-check"></i></i> Minimum 8 characters</P>
                   <P><i class="fas fa-check"></i></i> Must contain atleast 1 number</P>
                   <P><i class="fas fa-check"></i></i> Must contain atleast 1 letter</P>
@@ -42,7 +49,7 @@
                <label>Password</label>
                <input type="text"></input>
             </fieldset>
-             <fieldset>
+            <fieldset>
                <label>Phone Number</label>
                <input type="text"></input>
                <div id = 'hidden-phonediv'>
