--- a/minivalidator.html
+++ b/minivalidator.html
@@ -58,7 +58,7 @@
                   <p><i class="fas fa-phone-slash"></i>Connecticut based numbers only</p>
                </div>
             </fieldset>
-            <input type="submit" value="Create An Account" class="submit">
+            <button class="submit">Create An Account</button>
          </form>
       </div>
       <script src="valid.js"></script>
